<resources>
    <string name="app_name">AllowanceTracker</string>
    <string name="allowance_title">Allowance:</string>
    <string name="cost_hint_label">Cost</string>
    <string name="description_hint_label">Description</string>
    <string name="add_purchase_button_label">Add Purchase</string>
    <string name="add_a_purchase_dialog_title">Add a Purchase</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="balance_title">Balance:</string>
    <string name="zero_hint_label">00.00</string>
    <string name="set_allowance_button_label">Set Allowance</string>
    <string name="add_to_balance_button_label">Add to Balance</string>
    <string name="add_to_balance_button_content_desc">Add to Balance Button</string>
    <string name="delete_purchase_button_label">DELETE PURCHASE</string>
    <string name="delete_content_desc">Delete</string>
    <string name="save_purchase_button_label">Save Purchase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_purchase_title">Edit Purchase</string>
</resources>