<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/edit_purchase_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/edit_purchase_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toTopOf="@id/cost_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/cost_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:textAlignment="textEnd"
        android:layout_marginTop="50dp"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/edit_purchase_title" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cost_edit_text" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/save_purchase_button_label"
        app:layout_constraintTop_toBottomOf="@id/description_edit_text" />

    <LinearLayout
        android:id="@+id/deleteButton"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/myrect"
        android:backgroundTint="@color/red"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@color/red"
            android:contentDescription="@string/delete_content_desc"
            android:src="@drawable/ic_baseline_delete_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:text="@string/delete_purchase_button_label"
            android:textColor="@android:color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>